# ZLK38AVS

./: LICENSE.txt  Makefile  README.md  UBTEDU-README.md  build.sh  config.mk
apps/: avs_kit.patch  mscc_fw_loader  mscc_gr.lib
apps/python/: MiTuner_socket_server.py  hbi_example_code.py  hbi_load_firmware.py  tw_firmware_converter.py
apps/python/wrapper/: hbi.i
apps/reserved/: CMakeLists.txt  I2cLib.cpp  I2cLib.h  LedDriver.cpp  LedDriver.h  SampleApplication.h  UIManager.cpp  Zle38Avs.cpp  Zle38Avs.h  main.cpp  readme.txt
vproc_sdk/: Makefile.globals  doxygen.mk  readme
vproc_sdk/drivers/hbi/: Makefile  hbi.c  hbi_prv.h  hbi_tw.c
vproc_sdk/drivers/hbi/inc/: hbi.h
vproc_sdk/include/: chip.h  fwr_image_headers.h  zl380xx_tw.h
vproc_sdk/lnxdrivers/lnxhbi/lnxUser/: hbi_u.c
vproc_sdk/lnxdrivers/lnxhbi/lnxkernel/: Makefile  hbi_k.c
vproc_sdk/lnxdrivers/lnxhbi/lnxkernel/inc/: hbi_k.h
vproc_sdk/platform/raspberry/driver/sound/lnxalsa/soc/codec/: zl380xx_codec.c
vproc_sdk/platform/raspberry/driver/sound/lnxalsa/soc/machine/: microsemi-dac.c
vproc_sdk/platform/raspberry/driver/ssl/: Makefile  hal_port.c
vproc_sdk/platform/raspberry/include/: typedefs.h
vproc_sdk/platform/raspberry/kernel/: readme
vproc_sdk/platform/raspberry/kernel/dts/: Makefile  microsemi-i2c-multi-tw-dt-overlay.dts  microsemi-spi-multi-tw-dt-overlay.dts
